<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="6dp">
            <ImageView
                android:id="@+id/img"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img1"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/reddit"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck">

        </TextView>

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text="@string/_4_1"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry,TextSizeCheck"></TextView>
    </LinearLayout>
</androidx.cardview.widget.CardView>